SERVER-22287 added replicaSetId field to replica set configuration and metadata.

This field is generated when a replica set configuration is created from the replSetInitiate command