src/mongo/db/repl/replica_set_config.cpp
@@ -78,18 +78,24 @@ const std::string kGetLastErrorDefaultsFieldName = "getLastErrorDefaults";
 const std::string kGetLastErrorModesFieldName = "getLastErrorModes";
 const std::string kHeartbeatIntervalFieldName = "heartbeatIntervalMillis";
 const std::string kHeartbeatTimeoutFieldName = "heartbeatTimeoutSecs";
+const std::string kReplicaSetIdFieldName = "replicaSetId";
 
 }  // namespace
 
-Status ReplicaSetConfig::initialize(const BSONObj& cfg, bool usePV1ByDefault) {
-    return _initialize(cfg, false, usePV1ByDefault);
+Status ReplicaSetConfig::initialize(const BSONObj& cfg,
+                                    bool usePV1ByDefault,
+                                    OID defaultReplicaSetId) {
+    return _initialize(cfg, false, usePV1ByDefault, defaultReplicaSetId);
 }
 
 Status ReplicaSetConfig::initializeForInitiate(const BSONObj& cfg, bool usePV1ByDefault) {
-    return _initialize(cfg, true, usePV1ByDefault);
+    return _initialize(cfg, true, usePV1ByDefault, OID());
 }
 
-Status ReplicaSetConfig::_initialize(const BSONObj& cfg, bool forInitiate, bool usePV1ByDefault) {
+Status ReplicaSetConfig::_initialize(const BSONObj& cfg,
+                                     bool forInitiate,
+                                     bool usePV1ByDefault,
+                                     OID defaultReplicaSetId) {
     _isInitialized = false;
     _members.clear();
     Status status =
@@ -184,6 +190,23 @@ Status ReplicaSetConfig::_initialize(const BSONObj& cfg, bool forInitiate, bool 
     status = _parseSettingsSubdocument(settings);
     if (!status.isOK())
         return status;
+
+    //
+    // Generate replica set ID if called from replSetInitiate.
+    // Otherwise, uses 'defaultReplicatSetId' as default if 'cfg' doesn't have an ID.
+    //
+    if (forInitiate) {
+        if (_replicaSetId.isSet()) {
+            return Status(ErrorCodes::InvalidReplicaSetConfig,
+                          str::stream() << "replica set configuration cannot contain '"
+                                        << kReplicaSetIdFieldName
+                                        << "' "
+                                           "field when called from replSetInitiate: " << cfg);
+        }
+        _replicaSetId = OID::gen();
+    } else if (!_replicaSetId.isSet()) {
+        _replicaSetId = defaultReplicaSetId;
+    }
 
     _calculateMajorities();
     _addInternalWriteConcernModes();
@@ -321,6 +344,19 @@ Status ReplicaSetConfig::_parseSettingsSubdocument(const BSONObj& settings) {
         }
         _customWriteConcernModes[modeElement.fieldNameStringData()] = pattern;
     }
+
+    // Parse replica set ID.
+    OID replicaSetId;
+    status = mongo::bsonExtractOIDField(settings, kReplicaSetIdFieldName, &replicaSetId);
+    if (status.isOK()) {
+        if (!replicaSetId.isSet()) {
+            return Status(ErrorCodes::BadValue,
+                          str::stream() << kReplicaSetIdFieldName << " field value cannot be null");
+        }
+    } else if (status != ErrorCodes::NoSuchKey) {
+        return status;
+    }
+    _replicaSetId = replicaSetId;
 
     return Status::OK();
 }
@@ -687,6 +723,11 @@ BSONObj ReplicaSetConfig::toBSON() const {
     gleModes.done();
 
     settingsBuilder.append(kGetLastErrorDefaultsFieldName, _defaultWriteConcern.toBSON());
+
+    if (_replicaSetId.isSet()) {
+        settingsBuilder.append(kReplicaSetIdFieldName, _replicaSetId);
+    }
+
     settingsBuilder.done();
     return configBuilder.obj();
 }
