src/mongo/db/repl/replica_set_config_test.cpp
@@ -954,7 +954,8 @@ bool operator==(const ReplicaSetConfig& a, const ReplicaSetConfig& b) {
         a.isConfigServer() == b.isConfigServer() &&
         a.getDefaultWriteConcern().wNumNodes == b.getDefaultWriteConcern().wNumNodes &&
         a.getDefaultWriteConcern().wMode == b.getDefaultWriteConcern().wMode &&
-        a.getProtocolVersion() == b.getProtocolVersion();
+        a.getProtocolVersion() == b.getProtocolVersion() &&
+        a.getReplicaSetId() == b.getReplicaSetId();
 }
 
 TEST(ReplicaSetConfig, toBSONRoundTripAbility) {
@@ -966,7 +967,8 @@ TEST(ReplicaSetConfig, toBSONRoundTripAbility) {
                                       << BSON_ARRAY(BSON("_id" << 0 << "host"
                                                                << "localhost:12345")) << "settings"
                                       << BSON("heartbeatIntervalMillis"
-                                              << 5000 << "heartbeatTimeoutSecs" << 20))));
+                                              << 5000 << "heartbeatTimeoutSecs" << 20
+                                              << "replicaSetId" << OID::gen()))));
     ASSERT_OK(configB.initialize(configA.toBSON()));
     ASSERT_TRUE(configA == configB);
 }
@@ -1317,6 +1319,92 @@ TEST(ReplicaSetConfig, ConfirmDefaultValuesOfAndAbilityToSetWriteConcernMajority
     ASSERT_FALSE(config.getWriteConcernMajorityShouldJournal());
     ASSERT_TRUE(config.toBSON().hasField("writeConcernMajorityJournalDefault"));
 }
+
+TEST(ReplicaSetConfig, ReplSetId) {
+    // Uninitialized configuration has no ID.
+    ASSERT_FALSE(ReplicaSetConfig().hasReplicaSetId());
+
+    // Cannot provide replica set ID in configuration document when initialized from
+    // replSetInitiate.
+    auto status =
+        ReplicaSetConfig().initializeForInitiate(BSON("_id"
+                                                      << "rs0"
+                                                      << "version" << 1 << "members"
+                                                      << BSON_ARRAY(BSON("_id" << 0 << "host"
+                                                                               << "localhost:12345"
+                                                                               << "priority" << 1))
+                                                      << "settings"
+                                                      << BSON("replicaSetId" << OID::gen())));
+    ASSERT_EQUALS(ErrorCodes::InvalidReplicaSetConfig, status);
+    ASSERT_STRING_CONTAINS(status.reason(),
+                           "replica set configuration cannot contain 'replicaSetId' field when "
+                           "called from replSetInitiate");
+
+
+    // Configuration created by replSetInitiate should generate replica set ID.
+    ReplicaSetConfig configInitiate;
+    ASSERT_OK(
+        configInitiate.initializeForInitiate(BSON("_id"
+                                                  << "rs0"
+                                                  << "version" << 1 << "members"
+                                                  << BSON_ARRAY(BSON("_id" << 0 << "host"
+                                                                           << "localhost:12345"
+                                                                           << "priority" << 1)))));
+    ASSERT_OK(configInitiate.validate());
+    ASSERT_TRUE(configInitiate.hasReplicaSetId());
+    OID replicaSetId = configInitiate.getReplicaSetId();
+
+    // Configuration initialized from local database can contain ID.
+    ReplicaSetConfig configLocal;
+    ASSERT_OK(configLocal.initialize(BSON("_id"
+                                          << "rs0"
+                                          << "version" << 1 << "members"
+                                          << BSON_ARRAY(BSON("_id" << 0 << "host"
+                                                                   << "localhost:12345"
+                                                                   << "priority" << 1))
+                                          << "settings" << BSON("replicaSetId" << replicaSetId))));
+    ASSERT_OK(configLocal.validate());
+    ASSERT_TRUE(configLocal.hasReplicaSetId());
+    ASSERT_EQUALS(replicaSetId, configLocal.getReplicaSetId());
+
+    // When reconfiguring, we can provide an default ID if the configuration does not contain one.
+    OID defaultReplicaSetId = OID::gen();
+    ASSERT_OK(configLocal.initialize(BSON("_id"
+                                          << "rs0"
+                                          << "version" << 1 << "members"
+                                          << BSON_ARRAY(BSON("_id" << 0 << "host"
+                                                                   << "localhost:12345"
+                                                                   << "priority" << 1))),
+                                     true,
+                                     defaultReplicaSetId));
+    ASSERT_OK(configLocal.validate());
+    ASSERT_TRUE(configLocal.hasReplicaSetId());
+    ASSERT_EQUALS(defaultReplicaSetId, configLocal.getReplicaSetId());
+
+    // 'replicaSetId' field cannot be null.
+    status = configLocal.initialize(BSON("_id"
+                                         << "rs0"
+                                         << "version" << 1 << "members"
+                                         << BSON_ARRAY(BSON("_id" << 0 << "host"
+                                                                  << "localhost:12345"
+                                                                  << "priority" << 1)) << "settings"
+                                         << BSON("replicaSetId" << OID())));
+    ASSERT_EQUALS(ErrorCodes::BadValue, status);
+    ASSERT_STRING_CONTAINS(status.reason(), "replicaSetId field value cannot be null");
+
+    // 'replicaSetId' field must be an OID.
+    status = configLocal.initialize(BSON("_id"
+                                         << "rs0"
+                                         << "version" << 1 << "members"
+                                         << BSON_ARRAY(BSON("_id" << 0 << "host"
+                                                                  << "localhost:12345"
+                                                                  << "priority" << 1)) << "settings"
+                                         << BSON("replicaSetId" << 12345)));
+    ASSERT_EQUALS(ErrorCodes::TypeMismatch, status);
+    ASSERT_STRING_CONTAINS(status.reason(),
+                           "\"replicaSetId\" had the wrong type. Expected OID, found NumberInt32");
+}
+
 }  // namespace
 }  // namespace repl
 }  // namespace mongo
